--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "amplify:amplifytypescriptlamcommons": "cd amplify/backend/function/amplifytypescriptlamcommons/opt && tsc && cd -",
+    "amplify:function1": "cd amplify/backend/function/function1/src && tsc && cd -"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^14.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier-eslint": "^11.0.0",
+    "typescript": "^4.1.2"
+  },
+  "private": true
 }
