--- a/amplify/backend/function/amplifytypescriptlamcommons/lib/nodejs/package.json
+++ b/amplify/backend/function/amplifytypescriptlamcommons/lib/nodejs/package.json
@@ -1,7 +1,29 @@
 {
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {}
+  "main": "index.ts",
+  "dependencies": {
+    "@aws-amplify/api": "^4.0.23",
+    "@aws-amplify/auth": "^4.3.13",
+    "@aws-amplify/core": "^4.3.5",
+    "@babel/plugin-transform-typescript": "^7.16.1",
+    "@babel/preset-flow": "^7.16.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "node-fetch": "^3.1.0",
+    "stripe": "^8.186.1"
+  },
+  "scripts": {
+    "compile": "tsc",
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "7.16.0",
+    "@types/aws-lambda": "^8.10.85",
+    "@types/domhandler": "2.4.2",
+    "@types/node": "^16.11.7",
+    "aws-sdk": "^2.1026.0",
+    "typescript": "^4.4.4"
+  }
 }
