--- a/amplify/backend/function/amplifytypescriptlamcommons/opt/package.json
+++ b/amplify/backend/function/amplifytypescriptlamcommons/opt/package.json
@@ -8,10 +8,5 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.85",
-    "@types/node": "^16.11.7",
-    "eslint-config-airbnb": "^19.0.0",
-    "typescript": "^4.4.4"
-  }
+  "devDependencies": {}
 }
