--- a/amplify/backend/function/function1/src/package.json
+++ b/amplify/backend/function/function1/src/package.json
@@ -8,10 +8,5 @@
     "compile": "tsc",
     "build": "tsc"
   },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.64",
-    "@types/node": "^14.14.9",
-    "eslint-config-airbnb": "^18.2.1",
-    "typescript": "^4.1.2"
-  }
+  "devDependencies": {}
 }
