--- a/amplify/backend/function/amplifytypescriptlamcommons/opt/tsconfig.json
+++ b/amplify/backend/function/amplifytypescriptlamcommons/opt/tsconfig.json
@@ -1,31 +1,29 @@
 {
-    "compilerOptions": {
-      "target": "es2017",
-      "module": "CommonJS",
-      "allowJs": true,
-      "moduleResolution": "node",
-      "allowSyntheticDefaultImports": true,
-      "noUnusedLocals": false,
-      "strictNullChecks": false,
-      "noUnusedParameters": false,
-      "removeComments": false,
-      "preserveConstEnums": true,
-      "sourceMap": true,
-      "skipLibCheck": true,
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "commonjs",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "noUnusedLocals": false,
+    "strictNullChecks": false,
+    "noUnusedParameters": false,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
 
-      "lib": ["dom", "esnext"],
-      "esModuleInterop": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "resolveJsonModule": true,
-      "noEmit": false,
-      "isolatedModules": true,
-      "noFallthroughCasesInSwitch": true,
-      "outDir": "./build",
-      "noImplicitAny": false,
-     
-    },
- 
-    "exclude": ["./build"]
-  
+    "lib": ["dom", "esnext"],
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "noEmit": false,
+    "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
+    "outDir": "./build",
+    "noImplicitAny": false
+  },
+
+  "exclude": ["./build"]
 }
